# samdul04food

./: .firebaserc  .pyproject.toml.swp  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: .index.html.swp  index.html
src/samdul04food/: main.py
